src/test/deca/syntax/invalid/op_multiply_plus.synt
op_multiply_plus.deca:11: